# wine-quality-classifier

./: .cruft.json  README.md  config.yaml  pyproject.toml  pyproject.toml.rej
notebooks/: Train.ipynb
utils/: tracking.py
